// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<BoxedGroupAccordion
  onClick={[Function]}
  open={true}
  title={
    <h4
      className="display-inline-block"
    >
      Foo
    </h4>
  }
>
  <table
    className="data zebra notifications-table"
    key="foo"
  >
    <thead>
      <tr>
        <th
          aria-label="project"
        />
        <th
          className="text-center"
          key="channel1"
        >
          <h4>
            notification.channel.channel1
          </h4>
        </th>
        <th
          className="text-center"
          key="channel2"
        >
          <h4>
            notification.channel.channel2
          </h4>
        </th>
      </tr>
    </thead>
    <NotificationsList
      channels={
        Array [
          "channel1",
          "channel2",
        ]
      }
      checkboxId={[Function]}
      notifications={
        Array [
          Object {
            "channel": "channel1",
            "project": "foo",
            "projectName": "Foo",
            "type": "type1",
          },
          Object {
            "channel": "channel1",
            "project": "foo",
            "projectName": "Foo",
            "type": "type2",
          },
          Object {
            "channel": "channel2",
            "project": "foo",
            "projectName": "Foo",
            "type": "type2",
          },
        ]
      }
      onAdd={[Function]}
      onRemove={[Function]}
      project={true}
      types={
        Array [
          "type1",
          "type2",
        ]
      }
    />
  </table>
</BoxedGroupAccordion>
`;

exports[`should render correctly 2`] = `
<BoxedGroupAccordion
  onClick={[Function]}
  open={false}
  title={
    <h4
      className="display-inline-block"
    >
      Foo
    </h4>
  }
>
  <table
    className="data zebra notifications-table"
    key="foo"
  >
    <thead>
      <tr>
        <th
          aria-label="project"
        />
        <th
          className="text-center"
          key="channel1"
        >
          <h4>
            notification.channel.channel1
          </h4>
        </th>
        <th
          className="text-center"
          key="channel2"
        >
          <h4>
            notification.channel.channel2
          </h4>
        </th>
      </tr>
    </thead>
    <NotificationsList
      channels={
        Array [
          "channel1",
          "channel2",
        ]
      }
      checkboxId={[Function]}
      notifications={
        Array [
          Object {
            "channel": "channel1",
            "project": "foo",
            "projectName": "Foo",
            "type": "type1",
          },
          Object {
            "channel": "channel1",
            "project": "foo",
            "projectName": "Foo",
            "type": "type2",
          },
          Object {
            "channel": "channel2",
            "project": "foo",
            "projectName": "Foo",
            "type": "type2",
          },
        ]
      }
      onAdd={[Function]}
      onRemove={[Function]}
      project={true}
      types={
        Array [
          "type1",
          "type2",
        ]
      }
    />
  </table>
</BoxedGroupAccordion>
`;
